2008-12-18  Christopher Bratusek <nano-master@gmx.de>
	* lisp/sawfish/wm/gnome/integration.jl: invoke x-terminal-emulator instead of gnome-terminal [Christian Marillat] 

	* lisp/sawfish/wm/gnome/menus.jl: invoke x-terminal-emulator instead of gnome-terminal
	and add /usr/share/applications aswell as /var/lib/menu-xdg/applications/menu-xdg to the menu-paths [Christian Marillat]

2008-12-17  Christopher Bratusek <nano-master@gmx.de>
	* man/news.texi: Updated NEWS

	* lisp/sawfish/wm/commands/slide-window.jl: Add the "before-slide-hook" [Andrea Vettorello]

	* man/sawmill.texi: added documentation for the "before-slide-hook" [Andrea Vettorello]

	* lisp/sawfish/wm/placement/smart.jl
	* lisp/sawfish/wm/autoload.jl: Expose the smart placement modes

2008-12-16  Christopher Bratusek <nano-master@gmx.de>

	* lisp/sawfish/wm/placement/stagger.jl
	* lisp/sawfish/wm/placement/off-center.jl
	* lisp/sawfish/wm/autoload.jl: Re-expose the Stagger and Off-Center Placement Modes in Sawfish-ui [Andrea Vettorello]

2008-11-28  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: Fix installation of mxflat [Michal Jagermann]

	* lisp/sawfish/wm/state/wm-spec.jl
	* lisp/sawfish/wm/state/transient.jl: Suppert _NET_WM_USER_TIME [Helmut Eller]

	* sawfish/lisp/sawfish/ui/layouts/keymaps.jl
	* sawfish/lisp/sawfish/ui/layout.jl
	* lisp/sawfish/ui/widgets/frame-style.jl: Added ATK-A11Y Support [Shobbit Marthur]

	* configure.in: bump librep req to 0.17, rep-gtk req to 0.18.3 and version to 1.3.5

2008-11-20  Christopher Bratusek <nano-master@gmx.de>
	* lisp/sawfish/wm/autoload.jl: load all keybindings

	* lisp/sawfish/wm/viewport.jl: forgot one hunk of the viewport scroll feature

	* lisp/sawfish/wm/viewport.jl: added viewport boundary

	* lisp/sawfish/wm/ext/error-handler.jl: added error-handler "both"

2008-11-19  Christopher Bratusek <nano-master@gmx.de>
	* man/sawmill.texi: Updated Documentation [Derek Upham]

	* */*: remove ^L [Teika Kazura]

	* MAINTAINERS: updated
