@@ -44,6 +44,8 @@ they occurred between. For more detailed information see the
 @item Add a new hook: "before-slide-hook" by Andrea Vettorello
 
 @item Expose all smart placement-modes, "Best-Fit", "Best-Fit-Group", "First-Fit-Or-Interactively" by Christopher Bratusek
+
+@item Better GNOME Integration by Christian Marillat
 @end itemize
 
 @item Bugfixes:
