@@ -4,6 +4,10 @@
 	* lisp/sawfish/wm/gnome/menus.jl: invoke x-terminal-emulator instead of gnome-terminal
 	and add /usr/share/applications aswell as /var/lib/menu-xdg/applications/menu-xdg to the menu-paths [Christian Marillat]
 
+	* lisp/sawfish/wm/gnome/integration.jl: add gnome-menu to sawfish-menu [Christian Marillat]
+
+	* man/news.texi: Updated NEWS
+
 2008-12-17  Christopher Bratusek <nano-master@gmx.de>
 	* man/news.texi: Updated NEWS
 
